@@ -1,3 +1,8 @@
+2007-05-10 Borut Razem <borut.razem AT siol.net>
+
+	* support/scripts/gen_known_bugs.pl: added script
+	  which generates knownbugs.html
+
 2007-05-09 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* doc/knownbugs.html: updated for release 2.7.0
